<project>
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.helidon.jlink</groupId>
    <artifactId>helidon-jlink-project</artifactId>
    <version>1.0-SNAPSHOT</version>

    <packaging>pom</packaging>

    <properties>
        <version.plugin.compiler>3.8.1</version.plugin.compiler>
        <version.plugin.jar>3.1.2</version.plugin.jar>

        <!-- TODO need to sync these with Helidon. Can use new dependencies pom? -->

        <version.lib.weld>3.1.1.Final</version.lib.weld>
        <version.lib.weld.api>3.1.SP1</version.lib.weld.api>
        <version.lib.annotation-api>1.3.5</version.lib.annotation-api>
        <version.lib.jandex>2.1.1.Final</version.lib.jandex>

    </properties>

    <modules>
        <module>agent</module>
        <module>weld</module>
        <module>plugin</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>jakarta.annotation</groupId>
                <artifactId>jakarta.annotation-api</artifactId>
                <version>${version.lib.annotation-api}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.weld</groupId>
                <artifactId>weld-api</artifactId>
                <version>${version.lib.weld.api}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss</groupId>
                <artifactId>jandex</artifactId>
                <version>${version.lib.jandex}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.weld.environment</groupId>
                <artifactId>weld-environment-common</artifactId>
                <version>${version.lib.weld}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.jboss.classfilewriter</groupId>
                        <artifactId>jboss-classfilewriter</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.jboss.spec.javax.annotation</groupId>
                        <artifactId>jboss-annotations-api_1.3_spec</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.jboss.spec.javax.el</groupId>
                        <artifactId>jboss-el-api_3.0_spec</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.jboss.spec.javax.interceptor</groupId>
                        <artifactId>jboss-interceptors-api_1.2_spec</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${version.plugin.compiler}</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <compilerArgs>
                        <arg>--add-exports="java.base/jdk.internal.module=helidon.jlink"</arg>
                        <arg>--add-exports="java.base/jdk.internal.org.objectweb.asm=helidon.jlink"</arg>
                        <arg>--add-exports="java.base/jdk.internal.org.objectweb.asm.commons=helidon.jlink"</arg>
                        <arg>--add-exports="jdk.jlink/jdk.tools.jlink.plugin=helidon.jlink"</arg>
                        <arg>--add-exports="jdk.jlink/jdk.tools.jlink.internal=helidon.jlink"</arg>
                    </compilerArgs>
                    <fork>true</fork>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
